This is a brief overview of user-visible changes in libbinio.

Changes for version 1.1:
- Removed unused config header file.