@@ -2,7 +2,7 @@ lib_LTLIBRARIES = libbinio.la
 
 libbinio_la_SOURCES = binio.cpp binfile.cpp binwrap.cpp binstr.cpp
 
-libbinio_la_LDFLAGS = -version-info 0:0:0
+libbinio_la_LDFLAGS = -version-info 1:0:0
 
 include_HEADERS = binio.h binfile.h binwrap.h binstr.h
 
